# VectorisationWrapper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: VectorisationTests.yml
VectorisationWrappers/: AccelerateArithmeticUnitTests.cpp  AccelerateRangeUnitTests.cpp  AccelerateUtilitiesUnitTests.cpp  AccelerateWrapperUnitTests.cpp
VectorisationWrappers/Accelerate/: AccelerateArithmetic.h  AccelerateRange.h  AccelerateTrigonometry.h  AccelerateUtilities.h  AccelerateWrapper.cpp  AccelerateWrapper.h
VectorisationWrappers/Accelerate/Tests/: AccelerateArithmeticUnitTests.cpp  AccelerateRangeUnitTests.cpp  AccelerateTrigonometryUnitTests.cpp  AccelerateUtilitiesUnitTests.cpp
